--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Flutter
-      uses: subosito/flutter-action@v2
+      uses: subosito/flutter-action@v3
       with:
-        flutter-version: 'stable'
+        flutter-version: '3.24.5'  # <-- PINNED VERSION
 
     - name: Enable Windows desktop
       run: flutter config --enable-windows-desktop
