--- a/.github/workflows/buid.yml
+++ b/.github/workflows/buid.yml
@@ -14,26 +14,30 @@ jobs:
       uses: actions/checkout@v4
 
     # -----------------------------
-    # Install Flutter
+    # Install Flutter manually (works on ALL Windows runners)
     # -----------------------------
-    - name: Install Flutter
-      uses: britannio/action-install-flutter@v1
-      with:
-        flutter-version: '3.24.5'
+    - name: Download Flutter SDK
+      run: |
+        Invoke-WebRequest https://storage.googleapis.com/flutter_infra_release/releases/stable/windows/flutter_windows_3.24.5-stable.zip -OutFile flutter.zip
+        Expand-Archive flutter.zip -DestinationPath $Env:UserProfile
+        echo "$Env:UserProfile\flutter\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+    - name: Check Flutter version
+      run: flutter --version
 
     - name: Flutter Doctor
       run: flutter doctor -v
 
     # -----------------------------
-    # Generate Windows project if missing
+    # Generate desktop project if missing
     # -----------------------------
     - name: Generate windows/ if missing
       run: |
         if (!(Test-Path "windows")) {
-          echo "⚠️ windows/ folder missing — generating desktop project..."
+          Write-Host "⚠️ Missing windows/ folder — running flutter create"
           flutter create .
         } else {
-          echo "windows/ folder exists — skipping creation."
+          Write-Host "windows/ folder found"
         }
 
     # -----------------------------
@@ -43,13 +47,13 @@ jobs:
       run: flutter pub get
 
     # -----------------------------
-    # Build Windows EXE
+    # Build EXE
     # -----------------------------
     - name: Build Windows Release
       run: flutter build windows --release
 
     # -----------------------------
-    # Upload EXE Artifact
+    # Upload built files
     # -----------------------------
     - name: Upload build output
       uses: actions/upload-artifact@v4
