--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,19 @@
 name: henson_field_app
 description: Henson Field Service - Starter
 publish_to: 'none'
+
 environment:
   sdk: '>=2.18.0 <3.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
-  supabase_flutter: ^0.3.0
+
+  # ↓↓↓ FIXED VERSIONS RIGHT HERE ↓↓↓
+  supabase_flutter: 0.2.0
+  supabase: 0.2.0
+  # ↑↑↑ You can use 0.2.0 - the last version compatible with your signInWithPassword() code
+
   flutter_riverpod: ^2.0.0
   go_router: ^7.0.0
   uuid: ^3.0.6
@@ -15,5 +22,6 @@ dependencies:
   signature: ^4.0.0
   flutter_map: ^4.0.0
   url_launcher: ^6.1.7
+
 flutter:
   uses-material-design: true
